--- a/app/src/main/res/layout/activity_loading_self.xml
+++ b/app/src/main/res/layout/activity_loading_self.xml
@@ -10,7 +10,7 @@
     <ImageView
         android:id="@+id/view_home_1"
         android:layout_width="386dp"
-        android:layout_height="135dp"
+        android:layout_height="0dp"
         android:layout_marginStart="3dp"
         android:layout_marginTop="7dp"
         android:layout_marginEnd="4dp"
@@ -30,7 +30,7 @@
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toBottomOf="@+id/view_home_1"
-        app:layout_constraintEnd_toStartOf="@+id/textView26"
+        app:layout_constraintEnd_toStartOf="@+id/name1"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/view_home_1"
         app:layout_constraintTop_toTopOf="@+id/view_home_1"
@@ -42,14 +42,13 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
-        android:hint="부품이 선택되지 않았습니다."
         app:layout_constraintStart_toEndOf="@+id/iv_home_1"
         app:layout_constraintTop_toTopOf="@+id/iv_home_1" />
 
     <ImageView
         android:id="@+id/view_home_3"
         android:layout_width="386dp"
-        android:layout_height="135dp"
+        android:layout_height="0dp"
         android:layout_marginStart="3dp"
         android:layout_marginTop="1dp"
         android:layout_marginEnd="4dp"
@@ -63,7 +62,7 @@
     <ImageView
         android:id="@+id/view_home_7"
         android:layout_width="386dp"
-        android:layout_height="135dp"
+        android:layout_height="0dp"
         android:layout_marginStart="3dp"
         android:layout_marginEnd="4dp"
         android:src="@drawable/self2"
@@ -75,7 +74,7 @@
     <ImageView
         android:id="@+id/view_home_9"
         android:layout_width="386dp"
-        android:layout_height="135dp"
+        android:layout_height="0dp"
         android:layout_marginStart="3dp"
         android:layout_marginEnd="4dp"
         android:layout_marginBottom="40dp"
@@ -88,7 +87,7 @@
     <ImageView
         android:id="@+id/view_home_5"
         android:layout_width="386dp"
-        android:layout_height="135dp"
+        android:layout_height="0dp"
         android:layout_marginStart="3dp"
         android:layout_marginTop="1dp"
         android:layout_marginEnd="4dp"
@@ -105,7 +104,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
-        android:hint="부품이 선택되지 않았습니다."
         app:layout_constraintStart_toEndOf="@+id/iv_home_4"
         app:layout_constraintTop_toTopOf="@+id/iv_home_4" />
 
@@ -119,7 +117,7 @@
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toBottomOf="@+id/view_home_3"
-        app:layout_constraintEnd_toStartOf="@+id/textView28"
+        app:layout_constraintEnd_toStartOf="@+id/name2"
         app:layout_constraintStart_toStartOf="@+id/view_home_3"
         app:layout_constraintTop_toBottomOf="@+id/view_home_1"
         app:layout_constraintVertical_bias="1.0" />
@@ -134,7 +132,7 @@
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toBottomOf="@+id/view_home_5"
-        app:layout_constraintEnd_toStartOf="@+id/textView30"
+        app:layout_constraintEnd_toStartOf="@+id/name3"
         app:layout_constraintStart_toStartOf="@+id/view_home_5"
         app:layout_constraintTop_toTopOf="@+id/view_home_5" />
 
@@ -144,7 +142,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
-        android:hint="부품이 선택되지 않았습니다."
         app:layout_constraintStart_toEndOf="@+id/iv_home_3"
         app:layout_constraintTop_toTopOf="@+id/iv_home_3" />
 
@@ -157,7 +154,7 @@
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toBottomOf="@+id/view_home_7"
-        app:layout_constraintEnd_toStartOf="@+id/textView31"
+        app:layout_constraintEnd_toStartOf="@+id/name4"
         app:layout_constraintStart_toStartOf="@+id/view_home_7"
         app:layout_constraintTop_toTopOf="@+id/view_home_7" />
 
@@ -170,7 +167,7 @@
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toBottomOf="@+id/view_home_9"
-        app:layout_constraintEnd_toStartOf="@+id/textView32"
+        app:layout_constraintEnd_toStartOf="@+id/name5"
         app:layout_constraintStart_toStartOf="@+id/view_home_9"
         app:layout_constraintTop_toTopOf="@+id/view_home_9" />
 
@@ -178,7 +175,7 @@
         android:id="@+id/tv_home_11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="60dp"
         android:text="         0kg         0₩"
         android:textSize="22sp"
@@ -192,7 +189,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
-        android:hint="부품이 선택되지 않았습니다."
         app:layout_constraintStart_toEndOf="@+id/iv_home_5"
         app:layout_constraintTop_toTopOf="@+id/iv_home_5" />
 
@@ -202,16 +198,15 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
-        android:hint="부품이 선택되지 않았습니다."
         app:layout_constraintStart_toEndOf="@+id/iv_home_2"
         app:layout_constraintTop_toTopOf="@+id/iv_home_2" />
 
     <TextView
-        android:id="@+id/textView26"
+        android:id="@+id/name1"
         android:layout_width="180dp"
         android:layout_height="0dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="25dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="24dp"
         android:fontFamily="@font/sedansc"
         android:textColor="#000000"
         android:textSize="20sp"
@@ -219,19 +214,19 @@
         app:layout_constraintTop_toTopOf="@+id/iv_home_1" />
 
     <TextView
-        android:id="@+id/textView27"
+        android:id="@+id/value1"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:fontFamily="@font/sedansc"
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/iv_home_1"
-        app:layout_constraintEnd_toEndOf="@+id/textView26"
-        app:layout_constraintStart_toStartOf="@+id/textView26"
-        app:layout_constraintTop_toBottomOf="@+id/textView26" />
+        app:layout_constraintEnd_toEndOf="@+id/name1"
+        app:layout_constraintStart_toStartOf="@+id/name1"
+        app:layout_constraintTop_toBottomOf="@+id/name1" />
 
     <TextView
-        android:id="@+id/textView28"
+        android:id="@+id/name2"
         android:layout_width="180dp"
         android:layout_height="0dp"
         android:layout_marginTop="10dp"
@@ -243,7 +238,7 @@
         app:layout_constraintTop_toTopOf="@+id/iv_home_2" />
 
     <TextView
-        android:id="@+id/textView30"
+        android:id="@+id/name3"
         android:layout_width="180dp"
         android:layout_height="0dp"
         android:layout_marginTop="10dp"
@@ -255,7 +250,7 @@
         app:layout_constraintTop_toTopOf="@+id/iv_home_3" />
 
     <TextView
-        android:id="@+id/textView31"
+        android:id="@+id/name4"
         android:layout_width="180dp"
         android:layout_height="0dp"
         android:layout_marginTop="10dp"
@@ -267,7 +262,7 @@
         app:layout_constraintTop_toTopOf="@+id/iv_home_4" />
 
     <TextView
-        android:id="@+id/textView32"
+        android:id="@+id/name5"
         android:layout_width="180dp"
         android:layout_height="0dp"
         android:layout_marginTop="10dp"
@@ -279,99 +274,206 @@
         app:layout_constraintTop_toTopOf="@+id/iv_home_5" />
 
     <TextView
-        android:id="@+id/textView29"
+        android:id="@+id/value2"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:fontFamily="@font/sedansc"
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/iv_home_2"
-        app:layout_constraintEnd_toEndOf="@+id/textView28"
-        app:layout_constraintStart_toStartOf="@+id/textView28"
-        app:layout_constraintTop_toBottomOf="@+id/textView28" />
+        app:layout_constraintEnd_toEndOf="@+id/name2"
+        app:layout_constraintStart_toStartOf="@+id/name2"
+        app:layout_constraintTop_toBottomOf="@+id/name2" />
 
     <TextView
-        android:id="@+id/textView33"
+        android:id="@+id/value3"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:fontFamily="@font/sedansc"
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/iv_home_3"
-        app:layout_constraintEnd_toEndOf="@+id/textView30"
+        app:layout_constraintEnd_toEndOf="@+id/name3"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/textView30"
-        app:layout_constraintTop_toBottomOf="@+id/textView30" />
+        app:layout_constraintStart_toStartOf="@+id/name3"
+        app:layout_constraintTop_toBottomOf="@+id/name3" />
 
     <TextView
-        android:id="@+id/textView35"
+        android:id="@+id/value4"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:fontFamily="@font/sedansc"
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/iv_home_4"
-        app:layout_constraintEnd_toEndOf="@+id/textView31"
-        app:layout_constraintStart_toStartOf="@+id/textView31"
-        app:layout_constraintTop_toBottomOf="@+id/textView31" />
+        app:layout_constraintEnd_toEndOf="@+id/name4"
+        app:layout_constraintStart_toStartOf="@+id/name4"
+        app:layout_constraintTop_toBottomOf="@+id/name4" />
 
     <TextView
-        android:id="@+id/textView36"
+        android:id="@+id/value5"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:fontFamily="@font/sedansc"
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/iv_home_5"
-        app:layout_constraintEnd_toEndOf="@+id/textView32"
-        app:layout_constraintStart_toStartOf="@+id/textView32"
-        app:layout_constraintTop_toBottomOf="@+id/textView32" />
+        app:layout_constraintEnd_toEndOf="@+id/name5"
+        app:layout_constraintStart_toStartOf="@+id/name5"
+        app:layout_constraintTop_toBottomOf="@+id/name5" />
+
+    <ImageView
+        android:id="@+id/self_back"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_home_11"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:src="@drawable/self3" />
+
+    <ImageView
+        android:id="@+id/tranparent_view2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@color/black"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton"
+        android:id="@+id/floatingActionButton11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
         android:layout_margin="15sp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="40dp"
-        android:clickable="true"
-        android:src="@drawable/floating1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:backgroundTint="#CECECE"/>
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="90dp"
-        android:backgroundTint="#CECECE"
-        android:clickable="true"
-        android:src="@drawable/floating1"
-        android:visibility="visible"
-        app:elevation="6dp"
+        android:layout_marginBottom="14dp"
+        android:backgroundTint="#cecece"
+        android:scaleType="center"
+        android:src="@drawable/self9"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:pressedTranslationZ="12dp"
-        app:fabSize="mini"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton4"
-        android:layout_width="wrap_content"
+    <FrameLayout
+        android:id="@+id/frameLayout"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="150dp"
-        android:backgroundTint="#CECECE"
-        android:clickable="true"
-        android:src="@drawable/floating1"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="15dp"
         android:visibility="visible"
-        app:elevation="6dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:pressedTranslationZ="12dp"
-        app:fabSize="mini"/>
+        app:layout_constraintBottom_toTopOf="@+id/floatingActionButton11"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/floatingActionButton22"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_marginEnd="16dp"
+            android:src="@drawable/float3"
+            android:visibility="invisible"
+            app:backgroundTint="#ffffff"
+            app:elevation="6dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:pressedTranslationZ="12dp"
+            tools:layout_editor_absoluteY="584dp" />
+
+        <TextView
+            android:id="@+id/floatingtext22"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:elevation="16dp"
+            android:text="견적신청"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="#FFFFFF"
+            android:textSize="26sp"
+            android:textStyle="bold"
+            android:visibility="invisible" />
+
+    </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/frameLayout3"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="6dp"
+        android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/floatingActionButton33"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_marginEnd="16dp"
+            android:src="@drawable/self8"
+            android:visibility="invisible"
+            app:backgroundTint="#ffffff"
+            app:elevation="6dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:pressedTranslationZ="12dp"
+            tools:layout_editor_absoluteY="460dp" />
+
+        <TextView
+            android:id="@+id/floatingtext33"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:elevation="16dp"
+            android:text="공유하기"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="#FFFFFF"
+            android:textSize="26sp"
+            android:textStyle="bold"
+            android:visibility="invisible" />
+
+    </FrameLayout>
+
+    <FrameLayout
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="6dp"
+        android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@+id/frameLayout3"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/floatingActionButton44"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_marginEnd="16dp"
+            android:src="@drawable/self7"
+            android:visibility="invisible"
+            app:backgroundTint="#ffffff"
+            app:elevation="6dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:pressedTranslationZ="12dp"
+            tools:layout_editor_absoluteY="522dp" />
+
+        <TextView
+            android:id="@+id/floatingtext44"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:elevation="16dp"
+            android:text="저장하기"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="#FFFFFF"
+            android:textSize="26sp"
+            android:textStyle="bold"
+            android:visibility="invisible" />
+
+    </FrameLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
